app/style/GetStarted.less
/* ... */
.loader-bar-bottom {
  float: left;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;

  .loader-bar-estimation {
    float: left;
    font-size: 11px;
    margin-left: 82px;
  }
}

.getstarted.content {
  margin-top: 55px;
  margin-left: 280px;

  .content-title {
    font-size: 27px;
    line-height: 34px;
    margin-bottom: 42px;
    width: 100%;
  }

  .content-text {
    font-size: 13px;

    .bold {
      font-weight: 600;
    }

    .column {
      float: left;
      width: 300px;
      margin-right: 32px;
    }
  }

  .seedWord {
    user-select: none;
    height: 23px;
    border-radius: 3px;
    color: var(--info-modal-button-text);
    margin: 5px;
    text-align: center;
    display: flex;
    align-items: center;
    
    .number {
      width: 20px;
      border-right: 1px solid var(--seedword-number-color);
      color: var(--seedword-number-color);
      font-size: 10px;
      height:23px;
      line-height: 23px;
    }
    .word {
      text-align: center;
      padding-left: 5px;
      width: 85px;
      font-size: 13px;
      line-height: 23px;
    }      
    
    .Select-control {
      padding-left:0;
      .Select-value {
        padding-left:0;
      }
    }

    .Select-input {
      height:23px;
      line-height: 23px;
      vertical-align: initial;
    }

    .Select-menu-outer {
      left: -27px;
      width: calc(100% + 28px);
    }

    &.filled {
      background-color: var(--info-modal-button-bg);
    }

    &.empty,
    &.restore {
      border: 1px solid var(--seedword-select-border-default-border-color);
      background-color: initial !important;
      
      .number {
        border-right: 1px solid var(--seedword-select-border-default-border-color);
        color: var(--seedword-select-border-default-text-color);
      }

      &:hover {
        border: 1px solid var(--seedword-select-border-default-hover-border-color);
        .number {
          border-right: 1px solid var(--seedword-select-border-default-hover-border-color);
          color:var(--seedword-select-border-default-hover-text-color);
        }
      }
    }

    &.populated {
      border: 1px solid var(--seedword-select-border-default-hover-text-color);
      background-color: initial !important;      
      .number {
          border-right: 1px solid var(--seedword-select-border-default-hover-text-color);
          color: var(--seedword-select-border-default-hover-text-color);
      }
    }

    &.no-match,
    &.error {
      border: 1px solid var(--error-red);
      .number {
        border-right: 1px solid var(--error-red);
        color: var(--error-red); 
      }
    }   
    
    &.match {
      border: 1px solid var(--accent-color);
      .number {
        border-right: 1px solid var(--accent-color);
        color: var(--accent-color); 
      }
    }    
}

  .toolbar {
    display: flex;
    flex-direction: row-reverse;
    width: 596px;
    margin-top: 20px;
    align-items: center;
  }

  .wallet-key-blue-button:not(.key-blue-button-disabled) {
    box-shadow: 0px 5px 13px rgba(0, 0, 0, 0.21);
  }

  .wallet-key-blue-button:hover {
    box-shadow: none;
  }

  .copy {
    grid-column: 4 / 6;
    padding-top: 2px;
    padding-left: 43px;
    height: 21px;
    color: var(--input-color);
    border: 1px solid var(--input-color);
    border-radius: 3px;
    margin: 4px;
    font-size: 13px;
    background-image: var(--copy-to-clipboard-icon);
    background-position: 26px 3px;
    background-size: 16px auto;
    background-repeat: no-repeat;
    cursor: pointer;
    user-select: none;
  }

  .copy:hover {
    opacity: 0.8;
  }

  .go-back-screen-button {
    height: 12px;
    width: 12px;
    background-repeat: no-repeat;
    background-size: 12px;
    background-image: var(--x-grey);
    opacity: 1;
    cursor: pointer;
  }

  .go-back-screen-button:hover {
    opacity: 0.7;
  }
}
.advanced-desc{
  font-size: 19px;  
  color: var(--modal-text);
  margin-bottom: 43px;
  margin-top: 60px;
  width: 444px;
  float:left; 
}

.release-notes {
  display: flex;
  clear: both;
  flex-wrap: wrap;
  justify-content: space-between;
  height: 65vh;
  overflow-y: scroll;
  padding-right: 1em;

  .release-notes-text {
    font-size: 13px;
    font-family: Helvetica, sans-serif;
    max-width: 410px;

    a {
      color:var(--link-color);
    }  
  }

  .release-notes-image {
    width: 590px;
    height: 295px;
    margin-top: 14px;
    background-repeat: no-repeat;
    background-size: 590px;

    &.release-image-v130 { background-image: @release-image-v130; }
    &.release-image-v140 { background-image: @release-image-v140; }
    &.release-image-v150 { background-image: @release-image-v150; }
  }

  @media screen and (max-width: 1140px) {
    .release-notes-image {
      flex:1;
      margin-top: 14px;
      background-repeat: no-repeat;
      width: 100%;
      height: 0;
      background-size: contain;
      padding-bottom: 50%; 
    }
  }

  @media screen and (max-width: 890px) {
    .release-notes-text {
      max-width: inherit;
    }
    .release-notes-image {
      order: -1;
    }
  }  
}

.release-notes-version-navigation {
  font-size: 13px;

  > a {
    margin-right: 30px;
    cursor: pointer;
    color: var(--title-text-and-button-background);
    text-decoration: none;
  }
}

.whatsnew {
  font-size: 13px;
  margin-left: 20px;
  text-decoration: underline;
  cursor: pointer;
  color: var(--info-modal-button-bg);
}

.whatsnew:hover {
  opacity: 0.7;
}
/* ... */

